# wax-mcp-server

./: LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
examples/: claude_demo.md  demo_script.md  promotion_posts.md  x_thread_wax_community.md
wax_mcp_server/: __init__.py  server.py
wax_mcp_server/tools/: balances.py  nfts.py  prices.py  transactions.py
wax_mcp_server/utils/: wax_rpc.py
