[project]
name = "wax-mcp-server"
version = "0.1.0"
description = "MCP server for WAX blockchain — let AI agents interact with WAXP, NFTs, AtomicAssets, and DeFi"
authors = [{ name = "Yoshi Kondo", email = "yoshi@musicailab.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/yksanjo/wax-mcp-server"
Repository = "https://github.com/yksanjo/wax-mcp-server"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["wax_mcp_server*"]
